# inputtino-python

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  test-install.yaml
src/: main.cpp
src/inputtino/: __init__.py  _core.pyi  base.py  joypad.py  keyboard.py  mouse.py  pentablet.py  touchscreen.py  trackpad.py
tests/: test_base.py  test_inputtino.py  test_joypad.py  test_keyboard.py  test_mouse.py
