[project]
name = "inputtino-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Geson-anko", email = "59220704+Geson-anko@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.scikit-build]
wheel.packages = ["src/inputtino"]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pybind11-stubgen>=2.5.1",
    "pyright>=1.1.393",
]

[tool.pyright]
pythonVersion = "3.12"
exclude = [
  "**/node_modules",
  "**/__pycache__",
]
strict = ["./src/"]
reportMissingModuleSource = "none"
